looked at solution code and fixed layout problems

--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@
 
 body {
 	font-family: 'Montserrat', Helvetica, Arial, sans-serif;
-	font-size: 16px;
+	font-size: 1em;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -13,7 +13,7 @@ body {
 
 .container{
 	max-width: 1200px;
-	margin: 0 auto;
+	width: 90%;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -47,21 +47,28 @@ p {
   padding: 0 1.875em;
 }
 
+ul {
+	margin: 0;
+}
+
 /***** Delete any fixed heights and floats- flexbox will be used to handle that now *****/
 
 /*The widths are in a percentage!*/
 header {
 	margin: 0 auto;
-	width: 90%;
+	width: 100%;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	flex-flow: row wrap;
+	text-align: center;
 }
 
 header h1 {
+	border-bottom: 3px solid #77a466;
 	margin: 0;
 	padding: 1.75em 0 1em 0;
+	width: 100%;
 }
 
 header h1 span {
@@ -74,7 +81,7 @@ header nav {
 	align-items: center;
 	padding: 2em 0;
 	width: 100%;
-	border-top: 3px solid #77a466;
+
 }
 
 header nav ul {
@@ -97,12 +104,10 @@ header nav ul li a{
 /*The widths are in a percentage!*/
 .top-section,
 .bottom-section {
-	margin: 0 auto;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	flex-flow: row wrap;
-	width: 90%;
 }
 
 .main-image {
@@ -169,7 +174,6 @@ header nav ul li a{
 .menu {
 	list-style: none;
 	padding: 0;
-	display: flex;
 }
 
 
@@ -214,36 +218,43 @@ footer span {
 @media all and (min-width:768px) {
     /* Tablet styles here */
 	.bottom-section {
-		display: flex;
-		justify-content: center;
-		align-items: center;
-		flex-flow: row nowrap;
+		justify-content: space-between;
+		align-items: flex-start;
+		border-top: 1px solid #eee;
 	}
 
-	.section-one {
-		width: 30%;
-		height: auto;
-		padding: 0 3em;
+	.section-one,
+	.section-two,
+	.section-three {
+			border-top: none;
+			flex-basis: 30%;
 	}
 
 	.section-two {
-		width: 30%;
-		border-left: 1px solid #eee;
-		border-right: 1px solid #eee;
-		height: auto;
-		padding: 0 3em;
-	}
-
-	.section-three{
-		width: 30%;
-		height: auto;
-		padding: 0 3em;
+			border-left: 1px solid #eee;
+			border-right: 1px solid #eee;
+			padding: 0 20px;
 	}
 
 }
 
 @media all and (min-width:1200px) {
     /* Desktop styles here */
+
+		header {
+				justify-content: space-between;
+		}
+
+		header h1 {
+        width: 30%;
+        padding: 0;
+        border-bottom: none;
+        text-align: left;
+    }
+
+		header nav {
+        width: 40%;
+    }
 
 
 header nav ul {
